Closed Bug 1871992 Opened 2 years ago Closed 2 years ago

Removing a threaded message in a unified folder may result in incorrect levels in the thread

Categories

(MailNews Core :: Backend, defect)

Thunderbird 115
defect

Tracking

(thunderbird_esr115? fixed, thunderbird122? fixed)

RESOLVED FIXED
123 Branch
Tracking Status
thunderbird_esr115 ? fixed
thunderbird122 ? fixed

People

(Reporter: welpy-cw, Assigned: welpy-cw)

Details

Attachments

(1 file)

There is a rather obvious bug in nsMsgXFViewThread::RemoveChildHdr that affects the correct adjustment of child header levels of the removed header.

Assignee: nobody → h.w.forms
Status: NEW → ASSIGNED
Target Milestone: --- → 123 Branch

Pushed by mkmelin@iki.fi:
https://hg.mozilla.org/comm-central/rev/29aa9bd66ae8
Fix bug in nsMsgXFViewThread::RemoveChildHdr. r=mkmelin

Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED

Comment on attachment 9370284 [details]
Bug 1871992 - Fix bug in nsMsgXFViewThread::RemoveChildHdr. r=#thunderbird-reviewers

[Approval Request Comment]
Regression caused by (bug #): Apparently this little bug has been around since 2008.
User impact if declined: Children of a removed message in an xf view may be re-indented incorrectly.
Testing completed (on c-c, etc.): c-c
Risk to taking this patch (and alternatives if risky): low

Attachment #9370284 - Flags: approval-comm-beta?

Comment on attachment 9370284 [details]
Bug 1871992 - Fix bug in nsMsgXFViewThread::RemoveChildHdr. r=#thunderbird-reviewers

[Triage Comment]
Approved for beta

Attachment #9370284 - Flags: approval-comm-beta? → approval-comm-beta+

Comment on attachment 9370284 [details]
Bug 1871992 - Fix bug in nsMsgXFViewThread::RemoveChildHdr. r=#thunderbird-reviewers

[Approval Request Comment]
User impact if declined: Children of a removed message in an xf view may be re-indented incorrectly.
Testing completed (on c-c, etc.): c-c and beta
Risk to taking this patch (and alternatives if risky): low

Attachment #9370284 - Flags: approval-comm-esr115?

Comment on attachment 9370284 [details]
Bug 1871992 - Fix bug in nsMsgXFViewThread::RemoveChildHdr. r=#thunderbird-reviewers

[Triage Comment]
Approved for esr115

Attachment #9370284 - Flags: approval-comm-esr115? → approval-comm-esr115+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: