Bug 1871992 - Fix bug in nsMsgXFViewThread::RemoveChildHdr. r=mkmelin

Differential Revision: https://phabricator.services.mozilla.com/D197301

--HG--
extra : rebase_source : 481cb21f681cfed9307f9f2f05881e0175ba1ec6
extra : amend_source : a81e0ae6257eabd6ee03b72dad215bd7a107a8de